--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             text-align: center;
             flex-shrink: 0; 
         }
+        @media (max-width: 648px) {
+            .tituloJuego { 
+                font-size: 3.5rem; 
+            }
+        }
         h2 { 
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
