--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 font-size: 3.5rem; 
             }
         }
+        @media (max-width: 444px) {
+            .tituloJuego { 
+                font-size: 2.5rem; 
+            }
+        }
         h2 { 
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
